--- a/auto_keybinds.cfg
+++ b/auto_keybinds.cfg
@@ -18,12 +18,12 @@ bind "Space" "+boing; +doing; +dong";
 bind "mwheelup" "exec auto_workaround"; bind "mwheeldown" "exec auto_workaround";
 
 // weapon side
-bind alt "toggle cl_righthand 0 1"
+bind alt switchhands;
 
 // bomb drop
 alias +c4drop "slot3; slot5;";
 alias -c4drop "drop; slot2; slot1";
-bind n "+c4drop";
+// bind n "+c4drop";
 
 // switch to the weapon on top
 alias +quick_swap "slot3";
