--- a/auto_mouse.cfg
+++ b/auto_mouse.cfg
@@ -2,5 +2,5 @@ m_mouseaccel1 "0";
 m_mouseaccel2 "0";
 m_mousespeed "0";
 m_rawinput "1";
-zoom_sensitivity_ratio_mouse "1.100000";
-sensitivity "0.45";
+zoom_sensitivity_ratio "1";
+sensitivity "0.32";
