--- a/auto_performance.cfg
+++ b/auto_performance.cfg
@@ -1,7 +1,7 @@
 cl_threaded_bone_setup 1 // different calculation of models, more fps
 mat_queue_mode 2; // forces multi threading
 r_dynamic 0; // disables lighting emitted by e.g. gun shots
-fps_max 0;
+fps_max 500;
 r_eyegloss "0" // No Makeup.
 r_eyemove "0" // No Eye Movement.
 r_eyeshift_x "0" // No Eye Movement X-Angel.
@@ -10,3 +10,11 @@ r_eyeshift_z "0" // No Eye Movement Z-Angel.
 r_eyesize "0" // Smaller Eyes.
 engine_no_focus_sleep 15; // more updates when tapped out
 r_fullscreen_gamma 3;
+r_csgo_effects_bloom false;
+r_csgo_water_refraction false;
+vprof_off;
+cl_disable_ragdolls 1;
+engine_low_latency_sleep_after_client_tick true;
+cl_allow_animated_avatars false;
+violence_hblood false;
+cl_autohelp 0;
