--- a/auto_keybinds.cfg
+++ b/auto_keybinds.cfg
@@ -7,15 +7,19 @@ bind "shift" "+duck;"
 bind "mouse5" "slot3";
 
 // jump throw
-alias "+boing" "+jump";
-alias "+doing" "-attack;-attack2";
-alias "+dong" "-jump";
-bind "Space" "+boing; +doing; +dong";
-// bind "Space" "+jump";
+// alias "+boing" "+jump";
+// alias "+doing" "-attack;-attack2";
+// alias "+dong" "-jump";
+// bind "Space" "+boing; +doing; +dong";
+bind "Space" "+jump";
+
+bind KP_MINUS "+jump";
+bind KP_PLUS "-attack";
+bind KP_ENTER "-attack2";
 
 // scroll wheel jump
-// bind "mwheelup" "+jump; clear;"; bind "mwheeldown" "+jump; clear;";
-bind "mwheelup" "exec auto_workaround"; bind "mwheeldown" "exec auto_workaround";
+bind "mwheelup" "+jump"; bind "mwheeldown" "+jump";
+// bind "mwheelup" "exec auto_workaround"; bind "mwheeldown" "exec auto_workaround";
 
 // weapon side
 bind alt switchhands;
