feat: adds newest cfg versions

--- a/auto_grenades.cfg
+++ b/auto_grenades.cfg
@@ -1,4 +1,9 @@
-bind "z" "use weapon_incgrenade; use weapon_molotov"
-bind "x" "use weapon_smokegrenade"
-bind "c" "use weapon_flashbang;"
-bind "v" "use weapon_hegrenade"
+// bind "z" "use weapon_incgrenade; use weapon_molotov"
+// bind "x" "use weapon_smokegrenade"
+// bind "c" "use weapon_flashbang;"
+// bind "v" "use weapon_hegrenade"
+
+bind c "slot7; nadeCH; +lookatweapon;-lookatweapon"
+bind x "slot8; nadeCH; +lookatweapon;-lookatweapon"
+bind v "slot6; nadeCH; +lookatweapon;-lookatweapon"
+bind z "slot10; nadeCH; +lookatweapon;-lookatweapon"
