--- a/auto_keybinds.cfg
+++ b/auto_keybinds.cfg
@@ -1,3 +1,45 @@
+//bind "w" "+forward"
+//bind "a" "+a_"
+//bind "s" "+back"
+//bind "d" "+d_"
+
+
+
+alias +d_ "echo "multi/+d" | exec;"
+alias -d_ "echo "multi/-d" | exec;"
+alias +a_ "echo "multi/+a" | exec;"
+alias -a_ "echo "multi/-a" | exec;"
+alias jump_ "echo "multi/jump" | exec;"
+alias +jump_ "echo "multi/+jump" | exec;"
+alias -jump_ "echo "multi/-jump" | exec;"
+alias +duck_ "echo "multi/+duck" | exec;"
+alias -duck_ "echo "multi/-duck" | exec;"
+alias +jb "echo "multi/+jb" | exec;"
+alias -jb "echo "multi/-jb" | exec;"
+alias +lj "echo "multi/+lj" | exec;"
+alias -lj "echo "multi/-lj" | exec;"
+alias +lj_w "echo "multi/+lj_w" | exec;"
+alias -lj_w "echo "multi/-lj_w" | exec;"
+alias +ljr_w "echo "multi/+ljr_w" | exec;"
+alias -ljr_w "echo "multi/-ljr_w" | exec;"
+alias +ljl_w "echo "multi/+ljl_w" | exec;"
+alias -ljl_w "echo "multi/-ljl_w" | exec;"
+
+// bind "mwheeldown" "jump_"
+// bind "mwheelup" "jump_"
+// bind "SPACE" "+jump_"
+// bind "mouse5" "+jb"
+
+//SWITCH LJ VERSION
+
+alias "+ljbind" "bind mouse4 +ljl_w; switchhandsleft"
+alias "+ljrightbind" "bind mouse4 +ljr_w; switchhandsright"
+alias "togglelj" "lj_on"
+alias "lj_on" "+ljbind; alias togglelj lj_off"
+alias "lj_off" "+ljrightbind; alias togglelj lj_on"
+
+// bind "mouse3" "togglelj"
+
 bind "w" "+forward;"
 bind "s" "+back;"
 bind "a" "+left;"
@@ -6,11 +48,6 @@ bind "ctrl" "+sprint;"
 bind "shift" "+duck;"
 bind "mouse5" "slot3";
 
-// jump throw
-// alias "+boing" "+jump";
-// alias "+doing" "-attack;-attack2";
-// alias "+dong" "-jump";
-// bind "Space" "+boing; +doing; +dong";
 bind "Space" "+jump";
 
 bind KP_MINUS "+jump";
@@ -19,10 +56,9 @@ bind KP_ENTER "-attack2";
 
 // scroll wheel jump
 bind "mwheelup" "+jump"; bind "mwheeldown" "+jump";
-// bind "mwheelup" "exec auto_workaround"; bind "mwheeldown" "exec auto_workaround";
 
 // weapon side
-bind alt switchhands;
+// bind alt switchhands;
 
 // bomb drop
 alias +c4drop "slot3; slot5;";
@@ -40,7 +76,7 @@ alias -quick_q "lastinv";
 bind "q" "+quick_q";
 
 // zoom map
-bind "," "toggle cl_radar_scale .80 .35";
+bind "m" "toggle cl_radar_scale .80 .35";
 
 // demo binds
 bind "F5" "demo_togglepause"
@@ -54,13 +90,13 @@ bind "F8" "demo_gototick -2000 relative"w
 
 // misc binds
 bind "p" "noclip"
-bind "m" "toggle cl_crosshairsize 1.5 1000"
+bind "," "toggle cl_crosshairsize 1.5 1000"
 bind "r" "+reload;r_cleardecals"
 bind "]" "toggleconsole"
 bind "/" "teammenu"
-bind c "slot7; nadeCH; +lookatweapon;-lookatweapon"
-bind x "slot8; nadeCH; +lookatweapon;-lookatweapon"
-bind v "slot6; nadeCH; +lookatweapon;-lookatweapon"
-bind z "slot10; nadeCH; +lookatweapon;-lookatweapon"
 bind o "ent_fire smokegrenade_projectile kill;ent_fire molotov_projectile kill;ent_fire flashbang_projectile kill;ent_fire hegrenade_projectile kill;ent_fire decoy_projectile kill;stopsound";
 bind l "sv_rethrow_last_grenade";
+bind scancode92 "volume 1";
+bind scancode93 "volume 0.4";
+bind scancode94 "volume 0.2";
+bind scancode95 "volume 0.01";
