--- a/auto_gameplay.cfg
+++ b/auto_gameplay.cfg
@@ -1,4 +1,4 @@
-r_drawtracers_firstperson 1; // enables bullet tracers for better spray control
+r_drawtracers_firstperson 1;
 cl_autowepswitch "0"
 gameinstructor_enable 0;
 cl_use_opens_buy_menu 0;
