--- a/auto_performance.cfg
+++ b/auto_performance.cfg
@@ -1,14 +1,10 @@
-cl_threaded_bone_setup 1 // different calculation of models, more fps
-mat_queue_mode 2; // forces multi threading
-r_dynamic 0; // disables lighting emitted by e.g. gun shots
+// cl_threaded_bone_setup 1 // different calculation of models, more fps
+// mat_queue_mode 2; // forces multi threading
+// r_dynamic 0; // disables lighting emitted by e.g. gun shots
 fps_max 500;
 engine_no_focus_sleep 15; // more updates when tapped out
-r_fullscreen_gamma 3;
-r_csgo_effects_bloom false;
-r_csgo_water_refraction false;
-vprof_off;
-cl_disable_ragdolls 1;
-engine_low_latency_sleep_after_client_tick true;
+r_fullscreen_gamma 2.1;
+// vprof_off;
+engine_low_latency_sleep_after_client_tick 1;
 cl_allow_animated_avatars false;
-violence_hblood false;
-cl_autohelp 0;
+violence_hblood 0;
